--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@ img {
 }
 
 body {
-    color: var(--main-color);
-    margin: 30px;
+    color: var(--light-color);
 }
 
 .container {
@@ -48,11 +47,11 @@ body {
 }
 
 .logo {
-    font-size: 34px;
+    font-family: 'Sacramento';
+    font-size: 24px;
     font-weight: 700;
     color: var(--main-color);
     margin: 0px auto 0px 24px;
-    font-family: 'Sacramento';
 }
 
 .logo:hover {
@@ -60,22 +59,20 @@ body {
 }
 
 .menu-icon {
-    background-color: var(--bg-color);
     display: grid;
     row-gap: 5px;
     padding: 14px 12px;
     cursor: pointer;
+    background-color: var(--bg-color);
     z-index: 200;
     transition: 0.3s;
 }
 
 .menu-icon div {
-    padding-left: 10px;
     display: block;
-    background-color: var(--light-color);
-    height: 1px;
-    width: 5px;
-    transition: 0.3s;
+    background: var(--light-color);
+    height: 2px;
+    width: 25px;
 }
 
 .navbar {
@@ -86,7 +83,7 @@ body {
     height: 100vh;
     background: rgba(255, 255, 255, 0.74);
     backdrop-filter: blur(4.5px);
-    z-index: 106;
+    z-index: 100;
     display: none;
     justify-content: center;
     align-items: center;
@@ -98,31 +95,19 @@ body {
 }
 
 .navbar a {
+    font-family: 'Hubballi';
     padding: 20px;
     font-size: 1.6rem;
     color: var(--text-color);
     font-weight: 500;
     transition: 0.2s all linear;
-    font-family: 'Hubballi';
 }
 
 .navbar a:hover {
     background: var(--bg-color);
-    font-size: 1.8rem;
-    color: var(--main-color);
 }
 
 .nav-icons {
-    display: flex;
-    column-gap: 1rem;
-    z-index: 200;
-}
-
-.nav-icons .bx {
-    font-size: 1.1rem;
     color: var(--text-color);
-    padding: 10px;
-    background: var(--bg-color);
-    border-radius: 0.5rem;
-    cursor: pointer;
+    font-size: 20px;
 }
