--- a/style.css
+++ b/style.css
@@ -211,3 +211,73 @@ body {
 .total span {
     font-weight: 500;
 }
+
+.login-form {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.74);
+    backdrop-filter: blur(4.5px);
+    z-index: 100;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s ease;
+}
+
+.login-form.active {
+    display: flex;
+}
+
+.login-form form {
+    max-width: 300px;
+    width: 100%;
+    display: grid;
+    margin: auto;
+    text-align: center;
+    row-gap: 1rem;
+    padding: 10px;
+}
+
+.login-form h2 {
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.login-form form input {
+    width: 100%;
+    outline: none;
+    border: none;
+    font-size: 0.9rem;
+    padding: 14px;
+    background: var(--bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 0.5rem;
+}
+
+.login-form form input::placeholder {
+    font-size: 0.9rem;
+    font-weight: 400;
+}
+
+.login-form form a {
+    font-size: 0.9rem;
+    color: var(--text-color);
+    text-align: right;
+}
+
+.login-form form a:hover {
+    color: var(--text-color);
+}
+
+.login-form form .btn {
+    border: none;
+    background: var(--text-color);
+    font-family: 'Sacramento';
+}
+
+.login-form form .btn:hover {
+    background: var(--hover-color);
+}
