--- a/style.css
+++ b/style.css
@@ -136,8 +136,20 @@ body {
 }
 
 .nav-icons {
+    display: flex;
+    column-gap: 1rem;
     color: var(--text-color);
     font-size: 20px;
+    z-index: 200;
+}
+
+.nav-icons .bx {
+    font-size: 1.1rem;
+    color: var(--text-color);
+    padding: 10px;
+    background: var(--bg-color);
+    cursor: pointer;
+    border-radius: 0.5rem;
 }
 
 .cart {
@@ -149,10 +161,14 @@ body {
     background: rgba(255, 255, 255, 0.74);
     backdrop-filter: blur(4.5px);
     z-index: 100;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     transition: 0.3s ease;
+}
+
+.cart.active {
+    display: flex;
 }
 
 .cart-content {
