--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ body {
 }
 
 .login-form {
+    font-family: 'Hubballi';
     position: fixed;
     left: 0;
     top: 0;
@@ -250,50 +251,34 @@ body {
 .login-form form {
     max-width: 300px;
     width: 100%;
-    display: grid;
     margin: auto;
+    display: grid;
     text-align: center;
     row-gap: 1rem;
     padding: 10px;
 }
 
-.login-form h2 {
-    font-size: 1.4rem;
+.login-form form h2 {
+    font-size: 1.5rem;
     font-weight: 600;
 }
 
 .login-form form input {
+    font-family: 'Hubballi';
     width: 100%;
     outline: none;
     border: none;
+    border-radius: 0.5rem;
     font-size: 0.9rem;
     padding: 14px;
-    background: var(--bg-color);
     border: 2px solid var(--main-color);
-    border-radius: 0.5rem;
-}
-
-.login-form form input::placeholder {
-    font-size: 0.9rem;
-    font-weight: 400;
-}
-
-.login-form form a {
-    font-size: 0.9rem;
-    color: var(--text-color);
-    text-align: right;
 }
 
 .login-form form a:hover {
-    color: var(--text-color);
+    color: var(--hover-color);
 }
 
 .login-form form .btn {
-    border: none;
-    background: var(--text-color);
     font-family: 'Sacramento';
-}
-
-.login-form form .btn:hover {
-    background: var(--hover-color);
+    font-size: 21px;
 }
